[workspace]
members = [ "benchmark-runner", "macros", "common", "providers/base-provider", "drivers/base-driver", "providers/terraform", "providers/vagrant", "drivers/graphscope/graphscope-config", "drivers/neo4j/neo4j-config",]
resolver = "2"

[profile.dev]
strip = "symbols"

[profile.release]
opt-level = 3
strip = "symbols"
