[package]
name = "benchmark-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15.7"
futures-util = "0.3.29"
hcl-rs = "0.16.6"
home = "0.5.5"
indicatif = "0.17.7"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
virt = "0.3.1"
whoami = "1.4.1"
macros = { path = "../macros" }
