[package]
name = "benchmark-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
futures-util = "0.3.29"
k8s-openapi = { version = "0.20", features = ["latest"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
common = { path = "../common" }
base-driver = { path = "../drivers/base-driver" }
base-provider = { path = "../providers/base-provider" }