[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"

[lib]
proc-macro = true
