[package]
name = "terraform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../../common" }
regex = "1"
async-trait = "0.1"
hcl-rs = "0.16.6"
serde_json = "1.0.108"
