[package]
name = "vagrant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../../common" }
async-trait = "0.1"
serde_yaml = "0.9.27"
virt = "0.3.1"
home = "0.5.5"
tracing = "0.1"