[package]
name = "graphscope-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
common = { path = "../../../common" }
k8s-openapi = { version = "0.20", features = ["latest"] }
kube = { version = "0.87", features = ["runtime", "derive"] }